// +build integration

package integration

import (
	"context"
	"testing"
	"time"

	"github.com/cloudless/cloudless/pkg/api"
	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
)

// TestNodeEnrollmentEvents verifies that node enrollment triggers EventNodeEnrolled
// CLD-REQ-071: Event stream records membership, scheduling, and security decisions
func TestNodeEnrollmentEvents(t *testing.T) {
	// Connect to coordinator
	conn, err := grpc.Dial("localhost:8443",
		grpc.WithTransportCredentials(insecure.NewCredentials()),
		grpc.WithTimeout(30*time.Second),
	)
	if err != nil {
		t.Fatalf("Failed to connect to coordinator: %v", err)
	}
	defer conn.Close()

	client := api.NewCoordinatorServiceClient(conn)
	ctx, cancel := context.WithTimeout(context.Background(), 10*time.Second)
	defer cancel()

	// Get initial node count
	listResp, err := client.ListNodes(ctx, &api.ListNodesRequest{})
	if err != nil {
		t.Fatalf("Failed to list nodes: %v", err)
	}
	initialNodeCount := len(listResp.Nodes)

	// TODO: Once event query API is implemented, verify EventNodeEnrolled was recorded
	// Expected behavior:
	// 1. Each node in the cluster should have triggered EventNodeEnrolled
	// 2. Event should contain node ID, zone, capacity metadata
	// 3. Event actor should be "system" or "admin"
	// 4. Event timestamp should match enrollment time

	t.Logf("Cluster has %d nodes enrolled (events should be recorded for each)", initialNodeCount)

	// For now, we verify nodes exist
	// Once integration is complete, add:
	// events := client.GetEvents(ctx, &api.GetEventsRequest{
	//     Filter: &api.EventFilter{Types: []string{"node.enrolled"}},
	// })
	// assert len(events.Events) >= initialNodeCount
}

// TestNodeHealthEvents verifies that node health state changes trigger events
// CLD-REQ-071: Event stream records membership decisions
func TestNodeHealthEvents(t *testing.T) {
	conn, err := grpc.Dial("localhost:8443",
		grpc.WithTransportCredentials(insecure.NewCredentials()),
	)
	if err != nil {
		t.Fatalf("Failed to connect to coordinator: %v", err)
	}
	defer conn.Close()

	client := api.NewCoordinatorServiceClient(conn)
	ctx, cancel := context.WithTimeout(context.Background(), 30*time.Second)
	defer cancel()

	// List nodes
	listResp, err := client.ListNodes(ctx, &api.ListNodesRequest{})
	if err != nil {
		t.Fatalf("Failed to list nodes: %v", err)
	}

	if len(listResp.Nodes) == 0 {
		t.Skip("No nodes available for health testing")
	}

	// TODO: Once event query API is implemented, verify health events
	// Expected events when a node fails:
	// 1. EventNodeOffline - when node stops responding
	// 2. EventNodeFailed - when health checks fail
	// 3. EventNodeRemoved - when node is removed from cluster
	//
	// Each event should include:
	// - Node ID in ResourceID
	// - Previous state and new state in metadata
	// - Timestamp of state transition
	// - Severity: Warning for offline, Error for failed, Info for removal

	t.Logf("Found %d nodes for health event testing", len(listResp.Nodes))

	// Once integration is complete, this test would:
	// 1. Drain a node
	// 2. Query events for EventNodeDrained
	// 3. Verify event contains correct node ID and metadata
	// 4. Uncordon the node
	// 5. Query events for EventNodeUncordoned
}

// TestSchedulingDecisionEvents verifies that workload scheduling triggers events
// CLD-REQ-071: Event stream records scheduling decisions
func TestSchedulingDecisionEvents(t *testing.T) {
	conn, err := grpc.Dial("localhost:8443",
		grpc.WithTransportCredentials(insecure.NewCredentials()),
	)
	if err != nil {
		t.Fatalf("Failed to connect to coordinator: %v", err)
	}
	defer conn.Close()

	client := api.NewCoordinatorServiceClient(conn)
	ctx, cancel := context.WithTimeout(context.Background(), 30*time.Second)
	defer cancel()

	// Create a test workload
	createReq := &api.CreateWorkloadRequest{
		Workload: &api.Workload{
			Name:      "test-events-workload",
			Namespace: "default",
			Spec: &api.WorkloadSpec{
				Image: "nginx:alpine",
				Resources: &api.ResourceRequirements{
					Requests: &api.ResourceCapacity{
						CpuMillicores: 1000, // 1 CPU
						MemoryBytes:   512 * 1024 * 1024, // 512 MB
					},
				},
			},
		},
	}

	workload, err := client.CreateWorkload(ctx, createReq)
	if err != nil {
		t.Fatalf("Failed to create workload: %v", err)
	}

	workloadID := workload.Id
	defer func() {
		// Cleanup: delete workload
		delCtx, delCancel := context.WithTimeout(context.Background(), 10*time.Second)
		defer delCancel()
		client.DeleteWorkload(delCtx, &api.DeleteWorkloadRequest{WorkloadId: workloadID})
	}()

	// Wait for scheduling to complete
	time.Sleep(5 * time.Second)

	// TODO: Once event query API is implemented, verify scheduling events
	// Expected behavior:
	// 1. EventSchedulingDecision should be recorded with:
	//    - WorkloadID in ResourceID
	//    - Selected node ID in metadata
	//    - Scheduling score in metadata
	//    - Decision reason (e.g., "best_fit", "locality")
	// 2. If scheduling fails, EventPlacementFailed should be recorded
	// 3. Event should have Severity: Info for success, Error for failure

	t.Logf("Workload %s created (scheduling decision event should be recorded)", workloadID)

	// Once integration is complete, add:
	// events := client.GetEvents(ctx, &api.GetEventsRequest{
	//     Filter: &api.EventFilter{
	//         Types: []string{"scheduling.decision"},
	//         ResourceID: workloadID,
	//     },
	// })
	// assert len(events.Events) == 1
	// assert events.Events[0].Metadata["node_id"] != ""
	// assert events.Events[0].Metadata["score"] > 0
}

// TestReschedulingEvents verifies that workload rescheduling triggers events
// CLD-REQ-071: Event stream records scheduling decisions
func TestReschedulingEvents(t *testing.T) {
	t.Skip("TODO: Implement after basic scheduling events work")

	// This test would:
	// 1. Create a workload on a specific node
	// 2. Drain that node
	// 3. Verify EventRescheduling is recorded
	// 4. Verify workload moves to another node
	// 5. Verify EventSchedulingDecision for new placement
}

// TestPolicyViolationEvents verifies that policy violations trigger events
// CLD-REQ-071: Event stream records security decisions
func TestPolicyViolationEvents(t *testing.T) {
	conn, err := grpc.Dial("localhost:8443",
		grpc.WithTransportCredentials(insecure.NewCredentials()),
	)
	if err != nil {
		t.Fatalf("Failed to connect to coordinator: %v", err)
	}
	defer conn.Close()

	client := api.NewCoordinatorServiceClient(conn)
	ctx, cancel := context.WithTimeout(context.Background(), 30*time.Second)
	defer cancel()

	// Attempt to create a workload that violates policy (e.g., privileged container)
	createReq := &api.CreateWorkloadRequest{
		Workload: &api.Workload{
			Name:      "test-privileged-workload",
			Namespace: "default",
			Spec: &api.WorkloadSpec{
				Image: "nginx:alpine",
				SecurityContext: &api.SecurityContext{
					Privileged: true, // This should violate default policy
				},
				Resources: &api.ResourceRequirements{
					Requests: &api.ResourceCapacity{
						CpuMillicores: 1000,
						MemoryBytes:   512 * 1024 * 1024,
					},
				},
			},
		},
	}

	_, err = client.CreateWorkload(ctx, createReq)

	// TODO: Once event query API is implemented, verify policy violation events
	// Expected behavior:
	// 1. If policy rejects, EventPolicyViolation should be recorded
	// 2. Event should contain:
	//    - Workload name in ResourceID
	//    - Policy name that was violated
	//    - Violation reason
	//    - Request details in metadata
	// 3. Event Severity should be Warning or Error
	// 4. Event ActorType should identify the user/system that attempted the violation

	if err != nil {
		t.Logf("Workload creation rejected (expected): %v", err)
		// Once integration is complete, query for EventPolicyViolation
	} else {
		t.Logf("Workload created (policy may allow privileged containers)")
		// Cleanup if created
		client.DeleteWorkload(ctx, &api.DeleteWorkloadRequest{
			WorkloadId: createReq.Workload.Name,
		})
	}
}

// TestAuthenticationEvents verifies that authentication attempts trigger events
// CLD-REQ-071: Event stream records security decisions
func TestAuthenticationEvents(t *testing.T) {
	// TODO: Once mTLS authentication events are implemented
	// Expected behavior:
	// 1. Successful authentication triggers EventAuthenticationSuccess
	// 2. Failed authentication triggers EventAuthenticationFailed
	// 3. Events include:
	//    - Actor ID (certificate CN or username)
	//    - Actor type (node, user, service)
	//    - Authentication method (mTLS, JWT, etc.)
	//    - Source IP address in metadata
	// 4. Failed attempts include failure reason

	t.Skip("TODO: Implement authentication event testing")
}

// TestWorkloadLifecycleEvents verifies that workload lifecycle triggers events
// CLD-REQ-071: Event stream records workload operations
func TestWorkloadLifecycleEvents(t *testing.T) {
	conn, err := grpc.Dial("localhost:8443",
		grpc.WithTransportCredentials(insecure.NewCredentials()),
	)
	if err != nil {
		t.Fatalf("Failed to connect to coordinator: %v", err)
	}
	defer conn.Close()

	client := api.NewCoordinatorServiceClient(conn)
	ctx, cancel := context.WithTimeout(context.Background(), 30*time.Second)
	defer cancel()

	// Create workload
	createReq := &api.CreateWorkloadRequest{
		Workload: &api.Workload{
			Name:      "test-lifecycle-workload",
			Namespace: "default",
			Spec: &api.WorkloadSpec{
				Image: "nginx:alpine",
				Resources: &api.ResourceRequirements{
					Requests: &api.ResourceCapacity{
						CpuMillicores: 1000,
						MemoryBytes:   512 * 1024 * 1024,
					},
				},
			},
		},
	}

	workload, err := client.CreateWorkload(ctx, createReq)
	if err != nil {
		t.Fatalf("Failed to create workload: %v", err)
	}

	workloadID := workload.Id

	// TODO: Update workload to trigger EventWorkloadUpdated
	// TODO: Scale workload to trigger EventWorkloadScaled

	// Delete workload
	_, err = client.DeleteWorkload(ctx, &api.DeleteWorkloadRequest{WorkloadId: workloadID})
	if err != nil {
		t.Fatalf("Failed to delete workload: %v", err)
	}

	// TODO: Once event query API is implemented, verify lifecycle events
	// Expected events in order:
	// 1. EventWorkloadCreated - when CreateWorkload is called
	// 2. EventWorkloadScheduled - when scheduler places workload
	// 3. EventWorkloadUpdated - when UpdateWorkload is called (if implemented)
	// 4. EventWorkloadScaled - when replicas change (if implemented)
	// 5. EventWorkloadDeleted - when DeleteWorkload is called
	//
	// Each event should include:
	// - Workload ID in ResourceID
	// - Workload name in metadata
	// - Relevant state changes in metadata
	// - Correlation ID linking related events

	t.Logf("Workload lifecycle completed (events should be recorded for create, schedule, delete)")
}

// TestLeaderElectionEvents verifies that RAFT leader election triggers events
// CLD-REQ-071: Event stream records coordinator decisions
func TestLeaderElectionEvents(t *testing.T) {
	t.Skip("TODO: Implement leader election event testing")

	// This test would:
	// 1. Query current leader
	// 2. Verify EventLeaderElected was recorded at startup
	// 3. If multiple coordinators, stop leader
	// 4. Verify EventLeaderStepDown is recorded
	// 5. Verify new EventLeaderElected is recorded
}

// TestEventFiltering verifies event query filtering works correctly
// CLD-REQ-071: Event stream should support filtering by type, severity, resource
func TestEventFiltering(t *testing.T) {
	t.Skip("TODO: Implement once GetEvents API is available")

	// This test would verify:
	// 1. Filter by event type (e.g., only scheduling events)
	// 2. Filter by severity (e.g., only errors)
	// 3. Filter by resource ID (e.g., events for specific workload)
	// 4. Filter by time range (e.g., last hour)
	// 5. Filter by correlation ID (e.g., all events from one request)
	// 6. Multiple filters combined (AND logic)
}

// TestEventCorrelation verifies that related events share correlation IDs
// CLD-REQ-071: Event stream should support correlation across operations
func TestEventCorrelation(t *testing.T) {
	t.Skip("TODO: Implement once GetEvents API is available")

	// This test would verify:
	// 1. Create workload with correlation ID in context
	// 2. Verify all related events (created, scheduled) share correlation ID
	// 3. Query events by correlation ID
	// 4. Verify complete operation trace is returned
}
